# politician_collector

./: .prettierignore  CONTRIBUTING.md  Dockerfile  README.md  datasource.json  dev.py  docker-compose.yml  esmapping.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
politicial_collector/: firebase.py  firestorage.py  main.py  storage.py
politicial_collector/api/: political_person.py  query_builder.py
politicial_collector/cli/: __init__.py  dictionary.py  etl.py  utils.py
politicial_collector/crawlers/: 政治家一覧.py  政治資金センター.py  衆議院議員一覧.py  質問主意書.py
politicial_collector/es/: __init__.py  fields.py  params.py  types.py
politicial_collector/es/dictionaries/: __init__.py  char_mappings_blank.py  dic_ja_popular.py  stopwords_ja_tag_cloud.py  synonym_graph_ja.py
politicial_collector/indices/: __init__.py
politician_collector/: __main__.py  config.py  firestorage.py  main.py  queues.py  storage.py
politician_collector/api/: __init__.py  political_person.py  query_builder.py
politician_collector/crawlers/: その他.py  史料編纂所データベース異体字同定一覧.py  最新参議院議員一覧.py  質問主意書.py
politician_collector/es/: core.py  params.py
politician_collector/es/dictionaries/: char_mappings_blank.py  char_mappings_異体字.py  dic_ja_political.py
politician_collector/indices/: __init__.py
ui/: .editorconfig  .eslintignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslintrc.js  nuxt.config.js  package-lock.json  package.json  prettierrc.js  tsconfig.json
ui/components/: Message.vue  searchbox.vue
ui/components/profile/: detail.vue  table.vue
ui/components/singleton/: QueryString.vue
ui/layouts/: default.vue  googleContacts.vue  search.vue
ui/middleware/: test.ts
ui/pages/: index.vue
ui/pages/profile/: _id.vue  index.vue
ui/store/: README.md  age.ts  globals.ts  index.ts  notify.ts
(+1 files in other folders)
